<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white">

<ScrollView
    android:id="@+id/scrollContainer"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:clipToPadding="false"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    app:layout_constraintBottom_toTopOf="@+id/bottomButtons"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/EditReasonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_box"
        android:padding="16dp"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <!-- Title text at the top -->
        <TextView
            android:id="@+id/tvEditMoodTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_mood"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/rounded_title"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Private Mood"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:thumbTint="@drawable/switch_thumb_tint"
            app:trackTint="@drawable/switch_track_tint" />
    </LinearLayout>


        <!-- "What mood are you feeling?" section -->
        <!-- Updated Mood Selection Section in fragment_add_mood.xml -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_bin"
            android:padding="12dp">

            <TextView
                android:id="@+id/tvMoodLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mood"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:layout_marginBottom="8dp" />

            <Spinner
                android:id="@+id/spinnerMood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/mood_options"
                android:prompt="@string/select_mood"/>


        </LinearLayout>


        <!-- Reason + photo container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_bin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ReasonLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reason_why"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:hint="Please type your thoughts here..."
                android:inputType="textMultiLine"
                android:maxLength="200"
                android:maxLines="10"
                android:padding="12dp" />

            <Button
                android:id="@+id/AttachPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/buttonColor"
                android:padding="8dp"
                android:text="@string/attach_photo"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/ivPhotoPreview"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:visibility="gone"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- Social situation + location container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@drawable/rounded_bin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSocialSituation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_situation"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:layout_marginBottom="8dp" />

            <RadioGroup
                android:id="@+id/rgSocialSituation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="24dp"
                android:weightSum="4">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbAlone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alone"
                    android:textSize="10sp"
                    android:textColor="@color/textColor"
                    android:gravity="center"
                    app:buttonTint="@drawable/radio_button_tint"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbOneOnOne"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:text="@string/one_on_one"
                    android:textSize="10sp"
                    android:textColor="@color/textColor"
                    android:gravity="center"
                    app:buttonTint="@drawable/radio_button_tint"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/group"
                    android:textSize="10sp"
                    android:textColor="@color/textColor"
                    android:gravity="center"
                    app:buttonTint="@drawable/radio_button_tint"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbCrowd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/crowd"
                    android:textColor="@color/textColor"
                    android:textSize="10sp"
                    android:gravity="center"
                    app:buttonTint="@drawable/radio_button_tint"/>

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAttachLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/detach_location"
                    android:backgroundTint="@color/buttonColor"
                    android:textColor="@color/textColor" />

                <ImageView
                    android:id="@+id/ivMap"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:src="@drawable/ic_map"
                    app:tint="#64a9e5"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

<LinearLayout
    android:id="@+id/bottomButtons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:gravity="center"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <Button
        android:id="@+id/btnSaveEntry"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/save_entry"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        android:background="@drawable/green_outline_button"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        android:background="@drawable/green_outline_button"
        android:textStyle="bold" />
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
