...
            android:textStyle="italic"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text=" @username" />

        <TextView
            android:id="@+id/tvDialogMood"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/darkText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDialogDescription"
            android:text="Description:"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:textColor="@color/darkText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
...
            android:textSize="12sp"
            android:textColor="@color/darkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDialogSocial"
            android:text="Situation:"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:textColor="@color/darkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
...
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primaryColor"
                android:textColor="@color/white"
                android:layout_marginEnd="16dp"/>

            <Button
                android:id="@+id/btnDialogEdit"
                style="@style/Widget.MaterialComponents.Button"
                android:text="Edit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primaryColor"
                android:textColor="@color/white"/>
...
