<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6FFF3"
    android:padding="16dp">

    <ImageView
        android:id="@+id/moodifyLoginLogo"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:contentDescription="Moodify logo image"
        android:scaleType="fitCenter"
        android:scaleX="3.5"
        android:scaleY="3.5"
        android:src="@drawable/moodify_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/tvMoodifyLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Moodify"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvWelcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:text="Welcome back"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etLoginUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvLoginSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="sign in to access your account."
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeBack"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="48dp"
        android:background="@drawable/bg_edittext_material"
        android:hint="Password"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:drawableEnd="@drawable/ic_login_lock"
        android:textColor="#000000"
        android:textColorHint="#7D7D7D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLoginUsername"
        app:layout_constraintVertical_bias="0.053" />


    <EditText
        android:id="@+id/etLoginUsername"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="48dp"
        android:background="@drawable/bg_edittext_material"
        android:drawableEnd="@drawable/ic_login_person"
        android:drawablePadding="12dp"
        android:hint="Enter your username"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColor="#000000"
        android:textColorHint="#7D7D7D"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/login_button_background"
        android:elevation="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:shadowColor="@android:color/transparent"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <TextView
        android:id="@+id/tvRegisterNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autoLink="none"
        android:text="@string/register_now_styled"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSkipAuthForDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/demo_login_button"
        android:text="For Demo Only: Login As Guest User"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:shadowColor="@android:color/transparent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:elevation="0dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.739" />

</androidx.constraintlayout.widget.ConstraintLayout>